# crypto-market-hub

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/ccxt-server/: Dockerfile  main.py  pyproject.toml
backend/ccxt-server/src/: __init__.py
backend/ccxt-server/src/config/: settings.py
backend/ccxt-server/src/exchanges/: __init__.py  base.py  binance.py  kraken.py
backend/ccxt-server/src/server/: __init__.py  grpc_server.py
backend/ccxt-server/src/services/: __init__.py  crypto_service.py
backend/crypto-server/: Dockerfile  go.mod  go.sum  sqlc.yaml
backend/crypto-server/cmd/api/: main.go
backend/crypto-server/db/migration/: 000001_init_schema.up.sql
backend/crypto-server/db/query/: ticker.sql
backend/crypto-server/internal/config/: config.go
backend/crypto-server/internal/database/: migrate.go
backend/crypto-server/internal/database/migrations/: 000001_init_schema.up.sql
backend/crypto-server/internal/domain/: ticker.go
backend/crypto-server/internal/grpc/: client.go  ticker_fetcher.go
backend/crypto-server/internal/handler/http/: market.go
backend/crypto-server/internal/repository/: ticker_repository.go
backend/crypto-server/internal/server/: server.go
backend/crypto-server/internal/service/: market.go
backend/crypto-server/internal/vault/: client.go
backend/proto/: crypto-market.proto
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
